# oj-eval-codex-064-20260421184858

./: .gitignore  CMakeLists.txt
src/: main.cpp
